[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Enemies/Bat_Sprite_Sheet.png" type="Texture" id=1]
[ext_resource path="res://Assets/Other/ShadowWhite_16x16.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Bat/Bat.gd" type="Script" id=3]
[ext_resource path="res://Overlap/Hurtboxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/PlayerDetectionZone/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Overlap/Hitboxes/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Effects/CreateEffectObject.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 48, 80, 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 4 ]
}

[sub_resource type="Animation" id=2]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 80, 16 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 4.0
height = 8.0

[sub_resource type="CircleShape2D" id=5]
radius = 320.025

[sub_resource type="CircleShape2D" id=6]
radius = 4.0

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.945098, 0.278431, 0.278431, 1 )

[sub_resource type="StyleBoxFlat" id=8]

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 4 )
texture = ExtResource( 1 )
offset = Vector2( 0, -16 )
hframes = 5
region_enabled = true
region_rect = Rect2( 0, 48, 80, 24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/death = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 0.313726 )
texture = ExtResource( 2 )
offset = Vector2( 0, -4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -12 )
shape = SubResource( 4 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 0.984314, 0.992157, 0.141176, 0.572549 )
shape = SubResource( 5 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -12 )
shape = SubResource( 6 )

[node name="CreateEffectObject" parent="." instance=ExtResource( 7 )]

[node name="HpText" type="Sprite" parent="."]
visible = false
z_index = 10

[node name="HealthBar" type="ProgressBar" parent="HpText"]
margin_left = -8.0
margin_top = -28.0
margin_right = 8.0
margin_bottom = -24.0
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]
